<resources>
    <string name="app_name">ItSamsungWeatherProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_icon_content_description">Weather icon</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="timezone">timezone</string>
    <string name="weather">Weather</string>
    <string name="cities">Cities</string>
    <string name="add">Add</string>
    <string name="min">Min</string>
    <string name="tmin">tmin</string>
    <string name="max">Max</string>
    <string name="tmax">tmax</string>
    <string name="rain">Rain</string>
    <string name="pp">pp</string>
    <string name="date">date</string>
    <string name="input_city_name_search">Enter the name of the city</string>
    <string name="list_of_cities">List of cities</string>
    <string name="city">City</string>
    <string name="temp">Temp</string>
    <string name="time">Time</string>
    <string name="dialog">Dialog</string>
    <string name="remove">"Remove "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>