<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/city_weather_background"
    android:elevation="5dp"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/add_city_item_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/weather_icon_content_description"
        android:scaleType="fitXY"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/add_city_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textFontWeight="600"
            android:text="@string/name" />
        <TextView
            android:id="@+id/add_city_item_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textFontWeight="500"
            />



        <TextView
            android:id="@+id/add_city_item_timezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/timezone"
            android:textFontWeight="500"
            />
    </LinearLayout>


    <ImageView
        android:id="@+id/add_city_item_action_add"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</LinearLayout>